src/objects/Project_Redeployed__c.object
<CustomObject>
    <description>Object created to track the Project Re-deployed activity</description>
    <fields>
        <fullName>Benefitting_Business_Grp_Functional_Grp__c</fullName>
        <label>Benefitting Business Grp/Functional Grp</label>
        <picklist>
            <picklistValues>
                <fullName>Applications &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief innovation and Operating office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Strategy &amp; Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP/Optical Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing &amp; Corporate Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefitting_Business_Unit__c</fullName>
        <label>Benefitting Business Unit</label>
        <picklist>
            <controllingField>Benefitting_Business_Grp_Functional_Grp__c</controllingField>
            <picklistValues>
                <fullName>Multiple BUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;A Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A&amp;AStrategy, Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC Regional Business Center (RBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ &amp; India RBC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications &amp; Analytics Marketing and Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR A&amp;A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CIOO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR FN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR Global Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR ION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHR MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand and Strategy Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BroadBandAccess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center of Expertise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Regional Business Center (RBC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOO Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOO Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CloudBand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMO Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO Integration and Chief of Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Collaboration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>QIPP Project</label>
        <referenceTo>QIPP_Project__c</referenceTo>
        <relationshipLabel>Project Redeployeds</relationshipLabel>
        <relationshipName>Project_Redeployeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Redeployed</label>
    <nameField>
        <label>Project Redeployed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Redeployeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>